[gd_scene load_steps=5 format=2]

[ext_resource path="res://HUD/HUD_end.gd" type="Script" id=1]
[ext_resource path="res://Art/upheavtt.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=2]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[node name="HUD_end" type="CanvasLayer"]
visible = false
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.00784314, 0.345098, 0.568627, 1 )

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -660.5
margin_top = -117.5
margin_right = 660.5
margin_bottom = 117.5
custom_fonts/font = SubResource( 2 )
text = "Jullie hebben
gewonnen!"
align = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -266.0
margin_top = 304.0
margin_right = 266.0
margin_bottom = 368.0
custom_fonts/font = SubResource( 3 )
text = "Opnieuw spelen"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
